# file-explorer-shell

./: CMakeLists.txt  Makefile  Makefile_original  README.md  commands.cpp  config.json  config.yml  dir_functions.cpp  display_file.cpp  file_details.cpp  main  main.cpp  myheader.h  navigate.cpp  new.txt  new_file.txt  search.cpp
include/: ansi_codes.hpp  myheader.h  myheader.hpp
src/: commands.cpp  dir_functions.cpp  display_file.cpp  file_details.cpp  invertedIndex.cpp  main.cpp  main2.cpp  navigate.cpp  search.cpp  ui.cpp  utils.cpp  utils2.cpp
src/core/: command_processor.cpp  commands.cpp  dir_cache.cpp  file_details.cpp  file_utils.cpp  navigation.cpp  navigation_init.cpp  navigator.cpp  search_engine.cpp  system.cpp
src/index/: index_runner.cpp  inverted_index.cpp  traversal.cpp  watcher_linux.cpp  watcher_mac.cpp
src/tui/: command_ui.cpp  details_ui.cpp  help_ui.cpp  input.cpp  panels.cpp  renderer.cpp  search_ui.cpp  signals.cpp  status.cpp  terminal.cpp
src/utils/: config.cpp  format.cpp  logger.cpp  text_utils.cpp
tests/: stubs.cpp  test_commands.cpp  test_config.cpp  test_dir_cache.cpp  test_file_utils.cpp  test_index.cpp  test_main.cpp  test_navigation.cpp  test_search.cpp  test_selection.cpp  test_utils.cpp
tests/dummy/: f2.txt
